--- a/company_website/static/common/menu.sass
+++ b/company_website/static/common/menu.sass
@@ -181,14 +181,14 @@
         display: flex
         position: fixed
         top: 0
-        height: 96px
+        height: $mobile-menu-height
         width: 100%
         background: $blue-color
         z-index: 1000
 
     .bottom-shadow-mobile
         position: fixed
-        top: 96px
+        top: $mobile-menu-height
         margin: 0
         margin-block-start: 0
         height: 4px
@@ -250,7 +250,7 @@
                 width: 150px
 
             .menu
-                padding-top: 96px
+                padding-top: $mobile-menu-height
                 padding-bottom: 30%
                 -ms-overflow-y: scroll
                 vertical-align: middle
