--- a/company_website/static/common/partials/_constants.sass
+++ b/company_website/static/common/partials/_constants.sass
@@ -31,7 +31,7 @@ $md-screen-size: 991px
 $sm-screen-size: 767px
 $mobile-devices-size: 450px
 
-
+$mobile-menu-height: 96px
 $menu-max-size: 1175px
 
 $extra-large-services-size: 1199px
